<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tutorials</string>
    <string name="continue_button" translatable="false">Continue</string>
    <string name="complete_screen_title" translatable="false">Complete</string>
    <string name="welcome_text" translatable="false">Welcome, Adam!</string>
    <string name="thanks_message" translatable="false">Thanks for creating a profile and learning about your radio</string>
    <string name="exit_button_text" translatable="false">Exit Tutorial</string>
    <string name="find_again_text" translatable="false">Find again in Apps</string>
    <string name="screen_description" translatable="false">Learn about your radio</string>
    <string name="video1_title" translatable="false">Home: Add Widgets | 0:08</string>
    <string name="video2_title" translatable="false">Status Bar: Customize | 0:10</string>
    <string name="video3_title" translatable="false">Media: Save Sources | 0:07</string>
    <string name="video4_title" translatable="false">Media: Save Stations | 0:04</string>
    <string name="video_title_default" translatable="false">Tutorials</string>
    <string name="apps_image_description" translatable="false">All apps image</string>
    <string name="video1_caption_0sTo3s" translatable="false">Customize your homescreen widgets</string>
    <string name="video1_caption_3sTo6s" translatable="false">Select your widget</string>
    <string name="video1_caption_8sTo10s" translatable="false">Change widgets by pressing edit icon</string>
    <string name="video2_caption_0sTo5s" translatable="false">Swipe down on status bar to customize</string>
    <string name="video2_caption_5sTo8s" translatable="false">Choose from a variety of shortcuts</string>
    <string name="video2_caption_8sTo19s" translatable="false">Drag and drop into Status Bar</string>
    <string name="video3_caption_0sTo8s" translatable="false">Press and hold to save stations</string>
    <string name="video3_caption_8sTo15s" translatable="false">Presets can be a mix of AM and FM</string>
    <string name="video4_caption_0sTo3s" translatable="false">Press and hold source to drag</string>
    <string name="video4_caption_3sTo6s" translatable="false">Drag to the left</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="caption" translatable="false">Caption</string>

</resources>
