<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/video3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video3_title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/video4_title"
        app:layout_constraintEnd_toEndOf="@+id/video3_button"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/video3_button" />

    <EditText
        android:id="@+id/video4_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/video4_title"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/video4_button"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/video4_button"
        app:layout_constraintTop_toBottomOf="@+id/video4_play_image" />

    <EditText
        android:id="@+id/video1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:text="@string/video1_title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/video1_button"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/video1_button" />

    <TextView
        android:id="@+id/screen_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen_description"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.036" />


    <Button
        android:id="@+id/video1_button"
        android:layout_width="352dp"
        android:layout_height="168dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:background="#B2F43636"
        app:layout_constraintEnd_toEndOf="@+id/screen_description"
        app:layout_constraintTop_toBottomOf="@+id/screen_description" />

    <Button
        android:id="@+id/video2_button"
        android:layout_width="352dp"
        android:layout_height="168dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="#8BC34A"
        app:layout_constraintBottom_toBottomOf="@+id/video1_button"
        app:layout_constraintStart_toEndOf="@+id/video1_button" />

    <ImageView
        android:id="@+id/video2_play_image"
        android:layout_width="108dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="PlayVideo"
        app:layout_constraintBottom_toTopOf="@+id/video2_title"
        app:layout_constraintEnd_toEndOf="@+id/video2_button"
        app:layout_constraintStart_toStartOf="@+id/video2_button"
        app:layout_constraintTop_toTopOf="@+id/video2_button"
        app:srcCompat="@drawable/ic_media_play" />

    <ImageView
        android:id="@+id/video3_play_image"
        android:layout_width="108dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="PlayVideo"
        app:layout_constraintBottom_toTopOf="@+id/video3_title"
        app:layout_constraintEnd_toStartOf="@+id/video4_button"
        app:layout_constraintStart_toStartOf="@+id/video3_button"
        app:layout_constraintTop_toBottomOf="@+id/video1_title"
        app:srcCompat="@drawable/ic_media_play" />

    <Button
        android:id="@+id/video3_button"
        android:layout_width="352dp"
        android:layout_height="168dp"
        android:layout_marginTop="40dp"
        android:background="#00CDD4"
        app:layout_constraintStart_toStartOf="@+id/video1_button"
        app:layout_constraintTop_toBottomOf="@+id/video1_button" />

    <Button
        android:id="@+id/video4_button"
        android:layout_width="352dp"
        android:layout_height="168dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:background="#FFC107"
        app:layout_constraintStart_toEndOf="@+id/video1_button"
        app:layout_constraintTop_toBottomOf="@+id/video1_button" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:layout_marginStart="364dp"
        android:layout_marginTop="8dp"
        android:background="#56FFFFFF"
        android:onClick="Continue"
        android:text="@string/continue_button"
        android:textColor="#FDFDFE"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/video4_button"
        app:layout_constraintTop_toBottomOf="@+id/video4_button" />

    <EditText
        android:id="@+id/video2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video2_title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/video4_button"
        app:layout_constraintEnd_toEndOf="@+id/video2_button"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/video2_button" />

    <ImageView
        android:id="@+id/video1_play_image"
        android:layout_width="108dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:onClick="PlayVideo"
        app:layout_constraintBottom_toBottomOf="@+id/video1_button"
        app:layout_constraintEnd_toEndOf="@+id/video1_button"
        app:layout_constraintStart_toStartOf="@+id/video1_button"
        app:layout_constraintTop_toTopOf="@+id/video1_button"
        app:srcCompat="@drawable/ic_media_play" />

    <ImageView
        android:id="@+id/video4_play_image"
        android:layout_width="108dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:onClick="PlayVideo"
        app:layout_constraintBottom_toBottomOf="@+id/video4_button"
        app:layout_constraintEnd_toEndOf="@+id/video4_button"
        app:layout_constraintStart_toStartOf="@+id/video4_button"
        app:layout_constraintTop_toBottomOf="@+id/video2_title"
        app:srcCompat="@drawable/ic_media_play" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="92dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ReturnToPreviousScreen"
        app:layout_constraintBottom_toTopOf="@+id/title_line"
        app:layout_constraintEnd_toStartOf="@+id/app_title"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_arrow_back_circle" />
    tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="267dp" />

</android.support.constraint.ConstraintLayout>